--- a/src/about-us.html
+++ b/src/about-us.html
@@ -69,6 +69,12 @@
                 <div class="rd-navbar-right rd-navbar-nav-wrap">
                   <div class="rd-navbar-aside">
                     <ul class="rd-navbar-contacts-2">
+                      <li> 
+                        <div class="unit unit-spacing-xs">
+                          <div class="unit-left"><span class="icon mdi mdi-email"></span></div>
+                          <div class="unit-body"><a class="mail" href="mailto:#">cv.ccori@gmail.com</a></div>
+                          </div>    
+                      </li>
                       <li>
                         <div class="unit unit-spacing-xs">
                           <div class="unit-left"><span class="icon mdi mdi-phone"></span></div>
@@ -83,7 +89,7 @@
                       </li>
                     </ul>
                     <ul class="list-share-2">
-                      <li><a class="icon mdi github-circle" href="https://github.com/CinthiaVilcachagua"></a></li>
+                      <li><a class="icon mdi mdi-github-circle" href="https://github.com/CinthiaVilcachagua"></a></li>
                       <li><a class="icon mdi mdi-linkedin" href="https://www.linkedin.com/in/cinthiavilcachagua/"></a></li>
                       <li><a class="icon mdi mdi-twitter" href="https://twitter.com/CinthiaVilcach1"></a></li>
                       <li><a class="icon mdi mdi-instagram" href="#"></a></li>
@@ -208,17 +214,17 @@
                 <div class="tab-pane fade" id="tabs-4-2">
                   <h4>Mis Fortalezas y Debilidades</h4>
                   <p>Soy una mujer con determinación. Los obstáculos en mi camino no han sido impedimento para salir adelante. Me adapto fácilmente a nuevos entornos logrando el éxito de los proyectos planteados. </p>
-                  <p>  Hablar en público es una de mis debilidades, pero vengo trabajando para mejor este aspecto en mi día a día. Asimismo, estoy reforzando mis conocimientos básicos de inglés. </p><img src="./images/soft1.jpeg" alt="" width="835" height="418"/>
+                  <p>  Hablar en público es una de mis debilidades, pero vengo trabajando para mejor este aspecto en mi día a día. Asimismo, estoy reforzando mis conocimientos básicos de inglés. </p><img src="./images/hackaton-labo.jpg" alt="" width="835" height="418"/>
                 </div>
                 <div class="tab-pane fade" id="tabs-4-3">
                   <h4>Lo que quiero llegar a ser</h4>
                   <p>Quiero trabajar en una empresa que me permita desarrollarme profesionalmente. </p>
-                  <p>Ser una gran programadora y una full stack developer. Como parte de mi aprendizaje, me he planteado conocer sobre inteligencia artificial y otros lenguajes de programación.</p><img src="images/about-1-835x418.jpg" alt="" width="835" height="418"/>
+                  <p>Ser una gran programadora y una full stack developer. Como parte de mi aprendizaje, me he planteado conocer sobre inteligencia artificial y otros lenguajes de programación.</p><img src="./images/node.js1.jpeg" alt="" width="835" height="418"/>
                 </div>
                 <div class="tab-pane fade" id="tabs-4-4">
                   <h4>Integridad y Dedicación</h4>
                   <p>Logros: Ingresar a la Universidad Nacional de Ingeniería. (2014), Trabajar con una nueva metodología, haciéndome ver todo desde diferente perspectiva. (2018), Concluir el Bootcamp de Laboratoria. (2019)</p>
-                  <p>Desafíos: Cambiar la arquitectura por la programación. Es una gran aventura, donde siento que ambas profesiones se fusionan. Enfrentarme a nuevos dilemas para mejorar un proyecto ha sido un gran reto, rescato mi perseverancia, mi comunicación y confianza para lograr el éxito.    </p><img src="images/about-1-835x418.jpg" alt="" width="835" height="418"/>
+                  <p>Desafíos: Cambiar la arquitectura por la programación. Es una gran aventura, donde siento que ambas profesiones se fusionan. Enfrentarme a nuevos dilemas para mejorar un proyecto ha sido un gran reto, rescato mi perseverancia, mi comunicación y confianza para lograr el éxito.    </p><img src="./images/soft1.jpeg" alt="" width="835" height="418"/>
                 </div>
               </div>
             </div>
@@ -296,10 +302,6 @@
                     <h5 class="font-weight-normal text-transform-none text-spacing-75">Hackeando la Desigualdad </h5>
                     <p>En marzo 2019 se realizó en Laboratoria una hackaton en conmemoración del día de la mujer, se tituló "Hackeando la desigualdad" (12 horas seguidas codeando).</p>
                   </div>
-                  <div class="tab-pane fade show active" id="tabs-5-5">
-                    <h5 class="font-weight-normal text-transform-none text-spacing-75">Taller de node.js por LIMA JS</h5>
-                    <p>Taller donde logre aprende y profundizar en conocimientos sobre node.js.</p>
-                  </div>
                 </div>
                 <div class="list-history-wrap">
                   <ul class="nav list-history">
@@ -309,10 +311,8 @@
                         <div class="list-history-circle"></div>Enero 2019</a></li>
                     <li class="list-history-item" role="presentation"><a href="#tabs-5-3" data-toggle="tab">
                         <div class="list-history-circle"></div>Febrero 2019</a></li>
-                    <li class="list-history-item" role="presentation"><a href="#tabs-5-4" data-toggle="tab">
+                    <li class="list-history-item" role="presentation"><a class="active" href="#tabs-5-4" data-toggle="tab">
                         <div class="list-history-circle"></div>Marzo 2019</a></li>
-                    <li class="list-history-item" role="presentation"><a class="active" href="#tabs-5-5" data-toggle="tab">
-                      <div class="list-history-circle"></div>Abril 2019</a></li>
                   </ul>
                 </div>
               </div>
@@ -332,79 +332,54 @@
 
       <!-- Page Footer-->
       <footer class="section footer-modern context-dark footer-modern-2">
-        <div class="footer-modern-line">
-          <div class="container">
-            <div class="row row-50">
-              <div class="col-md-6 col-lg-4">
-                <h5 class="footer-modern-title oh-desktop"><span class="d-inline-block wow slideInLeft">Hab. Técnicas</span></h5>
-                <ul class="footer-modern-list d-inline-block d-sm-block wow fadeInUp">
-                  <li><a href="#">Javascript(EMS 6)</a></li>
-                  <li><a href="#">HTML 5</a></li>
-                  <li><a href="#">CSS 3</a></li>
-                  <li><a href="#">Firebase</a></li>
-                  <li><a href="#">Node.js</a></li>
-                  <li><a href="#">Angular</a></li>
-                  <li><a href="#">Bootstrap</a></li>
-                  <li><a href="#">Chart.js</a></li>
-                </ul>
-              </div>
-              <div class="col-md-6 col-lg-4 col-xl-3">
-                <h5 class="footer-modern-title oh-desktop"><span class="d-inline-block wow slideInLeft">Aptitudes</span></h5>
-                <ul class="footer-modern-list d-inline-block d-sm-block wow fadeInUp">
-                  <li><a href="#">Metodología Agile</a></li>
-                  <li><a href="#">Autoaprendizaje</a></li>
-                  <li><a href="#">Trabajo en Equipo</a></li>
-                  <li><a href="#">Proacividad</a></li>
-                  <li><a href="#">Liderazgo</a></li>
-                  <li><a href="#">Adaptabilidad</a></li>
-                  <li><a href="#">Creatividad</a></li>
-                </ul>
-              </div>
-              <div class="col-lg-4 col-xl-5">
-                <h5 class="footer-modern-title oh-desktop"><span class="d-inline-block wow slideInLeft">Newsletter</span></h5>
-                <p class="wow fadeInRight">Sign up today for the latest news and updates.</p>
-                <!-- RD Mailform-->
-                <form class="rd-form rd-mailform rd-form-inline rd-form-inline-sm oh-desktop" data-form-output="form-output-global" data-form-type="subscribe" method="post" action="bat/rd-mailform.php">
-                  <div class="form-wrap wow slideInUp">
-                    <input class="form-input" id="subscribe-form-2-email" type="email" name="email" data-constraints="@Email @Required"/>
-                    <label class="form-label" for="subscribe-form-2-email">Enter your E-mail</label>
-                  </div>
-                  <div class="form-button form-button-2 wow slideInRight">
-                    <button class="button button-sm button-icon-3 button-primary button-winona" type="submit"><span class="d-none d-xl-inline-block">Subscribe</span><span class="icon mdi mdi-telegram d-xl-none"></span></button>
-                  </div>
-                </form>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="footer-modern-line-2">
-          <div class="container">
-            <div class="row row-30 align-items-center">
-              <div class="col-sm-6 col-md-7 col-lg-4 col-xl-4">
-                <div class="row row-30 align-items-center text-lg-center">
-                  <div class="col-md-7 col-xl-6"><a class="brand" href="index.html"><img src="images/logo-inverse-198x66.png" alt="" width="198" height="66"/></a></div>
-                  <div class="col-md-5 col-xl-6">
-                    <div class="iso-1"><span><img src="images/like-icon-58x25.png" alt="" width="58" height="25"/></span><span class="iso-1-big">100</span></div>
-                  </div>
+          <div class="footer-modern-line">
+            <div class="container">
+              <div class="row row-50">
+                <div class="col-md-6 col-lg-4">
+                  <h5 class="footer-modern-title oh-desktop"><span class="d-inline-block wow slideInLeft">Hab. técnicas</span></h5>
+                  <ul class="footer-modern-list d-inline-block d-sm-block wow fadeInUp">
+                    <li><a href="#">Javascript(EMS 6)</a></li>
+                    <li><a href="#">HTML 5</a></li>
+                    <li><a href="#">CSS 3</a></li>
+                    <li><a href="#">Firebase</a></li>
+                    <li><a href="#">Node.js</a></li>
+                    <li><a href="#">React</a></li>
+                    <li><a href="#">Bootstrap</a></li>
+                    <li><a href="#">Chart.js</a></li>
+                  </ul>
                 </div>
-              </div>
-              <div class="col-sm-6 col-md-12 col-lg-8 col-xl-8 oh-desktop">
-                <div class="group-xmd group-sm-justify">
+                <div class="col-md-6 col-lg-4 col-xl-3">
+                  <h5 class="footer-modern-title oh-desktop"><span class="d-inline-block wow slideInLeft">Aptitudes</span></h5>
+                  <ul class="footer-modern-list d-inline-block d-sm-block wow fadeInUp">
+                    <li><a href="#">Metodología Agile</a></li>
+                    <li><a href="#">Autoaprendizaje</a></li>
+                    <li><a href="#">Trabajo en Equipo</a></li>
+                    <li><a href="#">Proacividad</a></li>
+                    <li><a href="#">Liderazgo</a></li>
+                    <li><a href="#">Adaptabilidad</a></li>
+                    <li><a href="#">Creatividad</a></li>
+                  </ul>
+                </div>
+                <div class="col-lg-4 col-xl-5">
+                    <h5 class="footer-modern-title oh-desktop"><span class="d-inline-block wow slideInLeft">Redes Sociales</span></h5>
                   <div class="footer-modern-contacts wow slideInUp">
                     <div class="unit unit-spacing-sm align-items-center">
                       <div class="unit-left"><span class="icon icon-24 mdi mdi-phone"></span></div>
                       <div class="unit-body"><a class="phone" href="tel:#">+51 991 585 382</a></div>
                     </div>
                   </div>
+                  <div class="margen"> </div>
                   <div class="footer-modern-contacts wow slideInDown">
                     <div class="unit unit-spacing-sm align-items-center">
                       <div class="unit-left"><span class="icon mdi mdi-email"></span></div>
                       <div class="unit-body"><a class="mail" href="mailto:#">cv.ccori@gmail.com</a></div>
                     </div>
                   </div>
+                  <div class="margen"></div>
+                  <!-- Redes Sociales-->
                   <div class="wow slideInRight">
                     <ul class="list-inline footer-social-list footer-social-list-2 footer-social-list-3">
-                      <li><a class="icon mdi github-circle" href="https://github.com/CinthiaVilcachagua"></a></li>
+                      <li><a class="icon mdi mdi-github-circle" href="https://github.com/CinthiaVilcachagua"></a></li>
                       <li><a class="icon mdi mdi-linkedin" href="https://www.linkedin.com/in/cinthiavilcachagua/"></a></li>
                       <li><a class="icon mdi mdi-twitter" href="https://twitter.com/CinthiaVilcach1"></a></li>
                       <li><a class="icon mdi mdi-instagram" href="#"></a></li>
@@ -414,19 +389,18 @@
               </div>
             </div>
           </div>
-        </div>
-        <div class="footer-modern-line-3">
-          <div class="container">
-            <div class="row row-10 justify-content-between">
-              <div class="col-md-6"><span>Lima, Perú</span></div>
-              <div class="col-md-auto">
-                <!-- Rights-->
-                <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span><span></span><span>.&nbsp;</span><span>All Rights Reserved.</span><span> Design&nbsp;by&nbsp;<a href="#"> Cinthia Vilcachagua </a></span></p>
+          <div class="footer-modern-line-3">
+            <div class="container">
+              <div class="row row-10 justify-content-between">
+                <div class="col-md-6"><span>Lima, Perú</span></div>
+                <div class="col-md-auto">
+                  <!-- Rights-->
+                  <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span><span></span><span>.&nbsp;</span><span>All Rights Reserved.</span><span> Design&nbsp;by&nbsp;<a href="#">Cinthia Vilcachagua</a></span></p>
+                </div>
               </div>
             </div>
           </div>
-        </div>
-      </footer>
+        </footer>
     </div>
     <!-- Global Mailform Output-->
     <div class="snackbars" id="form-output-global"></div>
