--- a/src/contacts.html
+++ b/src/contacts.html
@@ -69,6 +69,12 @@
                 <div class="rd-navbar-right rd-navbar-nav-wrap">
                   <div class="rd-navbar-aside">
                     <ul class="rd-navbar-contacts-2">
+                      <li> 
+                        <div class="unit unit-spacing-xs">
+                          <div class="unit-left"><span class="icon mdi mdi-email"></span></div>
+                          <div class="unit-body"><a class="mail" href="mailto:#">cv.ccori@gmail.com</a></div>
+                        </div>    
+                      </li>
                       <li>
                         <div class="unit unit-spacing-xs">
                           <div class="unit-left"><span class="icon mdi mdi-phone"></span></div>
@@ -83,7 +89,7 @@
                       </li>
                     </ul>
                     <ul class="list-share-2">
-                      <li><a class="icon mdi github-circle" href="https://github.com/CinthiaVilcachagua"></a></li>
+                      <li><a class="icon mdi mdi-github-circle" href="https://github.com/CinthiaVilcachagua"></a></li>
                       <li><a class="icon mdi mdi-linkedin" href="https://www.linkedin.com/in/cinthiavilcachagua/"></a></li>
                       <li><a class="icon mdi mdi-twitter" href="https://twitter.com/CinthiaVilcach1"></a></li>
                       <li><a class="icon mdi mdi-instagram" href="#"></a></li>
@@ -96,8 +102,8 @@
                       </li>
                       <li class="rd-nav-item"><a class="rd-nav-link" href="about-us.html">Sobre mí</a>
                       </li>
-                      <li class="rd-nav-item"><a class="rd-nav-link" href="typography.html">Proyectos</a>
-                      </li>
+                      <!--<li class="rd-nav-item"><a class="rd-nav-link" href="typography.html">Proyectos</a>
+                      </li> -->
                       <li class="rd-nav-item active"><a class="rd-nav-link" href="contacts.html">Contáctame</a>
                       </li>
                     </ul>
@@ -175,7 +181,7 @@
             <h3 class="breadcrumbs-custom-title">Contáctame</h3>
             <div class="breadcrumbs-custom-decor"></div>
           </div>
-          <div class="box-transform" style="background-image: url(images/bg-1.jpg);"></div>
+          <div class="box-transform" style="background-image: url(./images/imagen0.jpg);"></div>
         </div>
         <div class="container">
           <ul class="breadcrumbs-custom-path">
@@ -188,8 +194,9 @@
       <section class="section section-lg bg-default text-md-left">
         <div class="container">
           <div class="row row-60 justify-content-center">
-            <div class="col-lg-8">
-              <h4 class="text-spacing-25 text-transform-none">Contáctame</h4>
+              
+            <!-- <div class="col-lg-8">
+              
               <form class="rd-form rd-mailform" data-form-output="form-output-global" data-form-type="contact" method="post" action="bat/rd-mailform.php">
                 <div class="row row-20 gutters-20">
                   <div class="col-md-6">
@@ -206,7 +213,7 @@
                   </div>
                   <div class="col-md-6">
                     <div class="form-wrap">
-                      <!--Select 2-->
+                      //Select-2
                       <select class="form-input" data-minimum-results-for-search="Infinity" data-constraints="@Required">
                         <option value="1">Select a Service</option>
                         <option value="2">Dine-In</option>
@@ -229,18 +236,19 @@
                   </div>
                 </div>
                 <button class="button button-secondary button-winona" type="submit">Contactar</button>
-              </form>
-            </div>
+              </form> 
+            </div> -->
             <div class="col-lg-4">
               <div class="aside-contacts">
                 <div class="row row-30">
+                    <h4 class="text-spacing-25 text-transform-none">Contáctame</h4>
                   <div class="col-sm-6 col-lg-12 aside-contacts-item">
                     <p class="aside-contacts-title">Redes sociales</p>
                     <ul class="list-inline contacts-social-list list-inline-sm">
-                      <li><a class="icon mdi mdi-facebook" href="#"></a></li>
-                      <li><a class="icon mdi mdi-twitter" href="#"></a></li>
-                      <li><a class="icon mdi mdi-instagram" href="#"></a></li>
-                      <li><a class="icon mdi mdi-google-plus" href="#"></a></li>
+                        <li><a class="icon mdi mdi-github-circle" href="https://github.com/CinthiaVilcachagua"></a></li>
+                        <li><a class="icon mdi mdi-linkedin" href="https://www.linkedin.com/in/cinthiavilcachagua/"></a></li>
+                        <li><a class="icon mdi mdi-twitter" href="https://twitter.com/CinthiaVilcach1"></a></li>
+                        <li><a class="icon mdi mdi-instagram" href="#"></a></li>
                     </ul>
                   </div>
                   <div class="col-sm-6 col-lg-12 aside-contacts-item">
@@ -254,14 +262,7 @@
                     <p class="aside-contacts-title">E-mail</p>
                     <div class="unit unit-spacing-xs justify-content-center justify-content-md-start">
                       <div class="unit-left"><span class="icon mdi mdi-email-outline"></span></div>
-                      <div class="unit-body"><a class="mail" href="mailto:#">cv.ccori@gamail.com</a></div>
-                    </div>
-                  </div>
-                  <div class="col-sm-6 col-lg-12 aside-contacts-item">
-                    <p class="aside-contacts-title">Address</p>
-                    <div class="unit unit-spacing-xs justify-content-center justify-content-md-start">
-                      <div class="unit-left"><span class="icon mdi mdi-map-marker"></span></div>
-                      <div class="unit-body"><a class="address" href="#">6036 Richmond hwy., <br class="d-md-none">Lima, Perú</a></div>
+                      <div class="unit-body"><a class="mail" href="mailto:#">cv.ccori@gmail.com</a></div>
                     </div>
                   </div>
                 </div>
@@ -272,79 +273,54 @@
       </section>
       <!-- Page Footer-->
       <footer class="section footer-modern context-dark footer-modern-2">
-        <div class="footer-modern-line">
-          <div class="container">
-            <div class="row row-50">
-              <div class="col-md-6 col-lg-4">
-                <h5 class="footer-modern-title oh-desktop"><span class="d-inline-block wow slideInLeft">Hab. Técnicas</span></h5>
-                <ul class="footer-modern-list d-inline-block d-sm-block wow fadeInUp">
-                  <li><a href="#">Javascript(EMS 6)</a></li>
-                  <li><a href="#">HTML 5</a></li>
-                  <li><a href="#">CSS 3</a></li>
-                  <li><a href="#">Firebase</a></li>
-                  <li><a href="#">Node.js</a></li>
-                  <li><a href="#">Angular</a></li>
-                  <li><a href="#">Bootstrap</a></li>
-                  <li><a href="#">Chart.js</a></li>
-                </ul>
-              </div>
-              <div class="col-md-6 col-lg-4 col-xl-3">
-                <h5 class="footer-modern-title oh-desktop"><span class="d-inline-block wow slideInLeft">Aptitudes</span></h5>
-                <ul class="footer-modern-list d-inline-block d-sm-block wow fadeInUp">
-                  <li><a href="#">Metodología Agile</a></li>
-                  <li><a href="#">Autoaprendizaje</a></li>
-                  <li><a href="#">Trabajo en Equipo</a></li>
-                  <li><a href="#">Proacividad</a></li>
-                  <li><a href="#">Liderazgo</a></li>
-                  <li><a href="#">Adaptabilidad</a></li>
-                  <li><a href="#">Creatividad</a></li>
-                </ul>
-              </div>
-              <div class="col-lg-4 col-xl-5">
-                <h5 class="footer-modern-title oh-desktop"><span class="d-inline-block wow slideInLeft">Newsletter</span></h5>
-                <p class="wow fadeInRight">Sign up today for the latest news and updates.</p>
-                <!-- RD Mailform-->
-                <form class="rd-form rd-mailform rd-form-inline rd-form-inline-sm oh-desktop" data-form-output="form-output-global" data-form-type="subscribe" method="post" action="bat/rd-mailform.php">
-                  <div class="form-wrap wow slideInUp">
-                    <input class="form-input" id="subscribe-form-2-email" type="email" name="email" data-constraints="@Email @Required"/>
-                    <label class="form-label" for="subscribe-form-2-email">Enter your E-mail</label>
-                  </div>
-                  <div class="form-button form-button-2 wow slideInRight">
-                    <button class="button button-sm button-icon-3 button-primary button-winona" type="submit"><span class="d-none d-xl-inline-block">Enter</span><span class="icon mdi mdi-telegram d-xl-none"></span></button>
-                  </div>
-                </form>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="footer-modern-line-2">
-          <div class="container">
-            <div class="row row-30 align-items-center">
-              <div class="col-sm-6 col-md-7 col-lg-4 col-xl-4">
-                <div class="row row-30 align-items-center text-lg-center">
-                  <div class="col-md-7 col-xl-6"><a class="brand" href="index.html"><img src="images/logo-inverse-198x66.png" alt="" width="198" height="66"/></a></div>
-                  <div class="col-md-5 col-xl-6">
-                    <div class="iso-1"><span><img src="images/like-icon-58x25.png" alt="" width="58" height="25"/></span><span class="iso-1-big">100</span></div>
-                  </div>
+          <div class="footer-modern-line">
+            <div class="container">
+              <div class="row row-50">
+                <div class="col-md-6 col-lg-4">
+                  <h5 class="footer-modern-title oh-desktop"><span class="d-inline-block wow slideInLeft">Hab. técnicas</span></h5>
+                  <ul class="footer-modern-list d-inline-block d-sm-block wow fadeInUp">
+                    <li><a href="#">Javascript(EMS 6)</a></li>
+                    <li><a href="#">HTML 5</a></li>
+                    <li><a href="#">CSS 3</a></li>
+                    <li><a href="#">Firebase</a></li>
+                    <li><a href="#">Node.js</a></li>
+                    <li><a href="#">React</a></li>
+                    <li><a href="#">Bootstrap</a></li>
+                    <li><a href="#">Chart.js</a></li>
+                  </ul>
                 </div>
-              </div>
-              <div class="col-sm-6 col-md-12 col-lg-8 col-xl-8 oh-desktop">
-                <div class="group-xmd group-sm-justify">
+                <div class="col-md-6 col-lg-4 col-xl-3">
+                  <h5 class="footer-modern-title oh-desktop"><span class="d-inline-block wow slideInLeft">Aptitudes</span></h5>
+                  <ul class="footer-modern-list d-inline-block d-sm-block wow fadeInUp">
+                    <li><a href="#">Metodología Agile</a></li>
+                    <li><a href="#">Autoaprendizaje</a></li>
+                    <li><a href="#">Trabajo en Equipo</a></li>
+                    <li><a href="#">Proacividad</a></li>
+                    <li><a href="#">Liderazgo</a></li>
+                    <li><a href="#">Adaptabilidad</a></li>
+                    <li><a href="#">Creatividad</a></li>
+                  </ul>
+                </div>
+                <div class="col-lg-4 col-xl-5">
+                    <h5 class="footer-modern-title oh-desktop"><span class="d-inline-block wow slideInLeft">Redes Sociales</span></h5>
                   <div class="footer-modern-contacts wow slideInUp">
                     <div class="unit unit-spacing-sm align-items-center">
                       <div class="unit-left"><span class="icon icon-24 mdi mdi-phone"></span></div>
                       <div class="unit-body"><a class="phone" href="tel:#">+51 991 585 382</a></div>
                     </div>
                   </div>
+                  <div class="margen"> </div>
                   <div class="footer-modern-contacts wow slideInDown">
                     <div class="unit unit-spacing-sm align-items-center">
                       <div class="unit-left"><span class="icon mdi mdi-email"></span></div>
                       <div class="unit-body"><a class="mail" href="mailto:#">cv.ccori@gmail.com</a></div>
                     </div>
                   </div>
+                  <div class="margen"></div>
+                  <!-- Redes Sociales-->
                   <div class="wow slideInRight">
                     <ul class="list-inline footer-social-list footer-social-list-2 footer-social-list-3">
-                      <li><a class="icon mdi github-circle" href="https://github.com/CinthiaVilcachagua"></a></li>
+                      <li><a class="icon mdi mdi-github-circle" href="https://github.com/CinthiaVilcachagua"></a></li>
                       <li><a class="icon mdi mdi-linkedin" href="https://www.linkedin.com/in/cinthiavilcachagua/"></a></li>
                       <li><a class="icon mdi mdi-twitter" href="https://twitter.com/CinthiaVilcach1"></a></li>
                       <li><a class="icon mdi mdi-instagram" href="#"></a></li>
@@ -354,19 +330,18 @@
               </div>
             </div>
           </div>
-        </div>
-        <div class="footer-modern-line-3">
-          <div class="container">
-            <div class="row row-10 justify-content-between">
-              <div class="col-md-6"><span>Lima, Perú</span></div>
-              <div class="col-md-auto">
-                <!-- Rights-->
-                <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span><span></span><span>.&nbsp;</span><span>All Rights Reserved.</span><span> Design&nbsp;by&nbsp;<a href="#">Cinthia Vilcachagua</a></span></p>
+          <div class="footer-modern-line-3">
+            <div class="container">
+              <div class="row row-10 justify-content-between">
+                <div class="col-md-6"><span>Lima, Perú</span></div>
+                <div class="col-md-auto">
+                  <!-- Rights-->
+                  <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span><span></span><span>.&nbsp;</span><span>All Rights Reserved.</span><span> Design&nbsp;by&nbsp;<a href="#">Cinthia Vilcachagua</a></span></p>
+                </div>
               </div>
             </div>
           </div>
-        </div>
-      </footer>
+        </footer>
     </div>
     <!-- Global Mailform Output-->
     <div class="snackbars" id="form-output-global"></div>
