--- a/src/index.html
+++ b/src/index.html
@@ -69,6 +69,12 @@
                 <div class="rd-navbar-right rd-navbar-nav-wrap">
                   <div class="rd-navbar-aside">
                     <ul class="rd-navbar-contacts-2">
+                      <li> 
+                        <div class="unit unit-spacing-xs">
+                          <div class="unit-left"><span class="icon mdi mdi-email"></span></div>
+                          <div class="unit-body"><a class="mail" href="mailto:#">cv.ccori@gmail.com</a></div>
+                        </div>    
+                      </li>
                       <li>
                         <div class="unit unit-spacing-xs">
                           <div class="unit-left"><span class="icon mdi mdi-phone"></span></div>
@@ -235,7 +241,7 @@
                 <article class="services-terri wow slideInDown">
                   <div class="services-terri-figure"><img src="images/menu-2-370x278.jpg" alt="" width="370" height="278"/>
                   </div>
-                  <div class="services-terri-caption"><span class="services-terri-icon linearicons-map2"></span>
+                  <div class="services-terri-caption"><span class="services-terri-icon linearicons-map2"><a href="https://github.com/CinthiaVilcachagua/lim-2018-11-bc-core-am-cipher"></a></span>  
                     <h5 class="services-terri-title"><a href="https://github.com/CinthiaVilcachagua/lim-2018-11-bc-core-am-cipher">Cipher</a></h5>
                   </div>
                 </article>
@@ -259,7 +265,7 @@
                 <article class="services-terri wow slideInDown">
                   <div class="services-terri-figure"><img src="images/menu-4-370x278.jpg" alt="" width="370" height="278"/>
                   </div>
-                  <div class="services-terri-caption"><span class="services-terri-icon linearicons-thumbs-up"></span>
+                  <div class="services-terri-caption">"><span class="services-terri-icon linearicons-thumbs-up"></span>
                     <h5 class="services-terri-title"><a href="https://github.com/CinthiaVilcachagua/scl-2018-12-bc-core-data-lovers">Worldbank</a></h5>
                   </div>
                 </article>
@@ -272,7 +278,7 @@
                   <div class="services-terri-figure"><img src="images/menu-5-370x278.jpg" alt="" width="370" height="278"/>
                   </div>
                   <div class="services-terri-caption"><span class="services-terri-icon linearicons-users"></span>
-                    <h5 class="services-terri-title"><a href="https://github.com/CinthiaVilcachagua/LIM008-social-network">Laboratorinas</a></h5>
+                    <h5 class="services-terri-title"><a href="https://github.com/CinthiaVilcachagua/comunal-co">Reto-Comunal</a></h5>
                   </div>
                 </article>
               </div>
@@ -283,7 +289,7 @@
                 <article class="services-terri wow slideInDown">
                   <div class="services-terri-figure"><img src="images/menu-6-370x278.jpg" alt="" width="370" height="278"/>
                   </div>
-                  <div class="services-terri-caption"><span class="services-terri-icon linearicons-steak"></span>
+                  <div class="services-terri-caption"><span class="services-terri-icon linearicons-home"></span>
                     <h5 class="services-terri-title"><a href="https://github.com/CinthiaVilcachagua/app-rimac-seguros">Reto-Rimac</a></h5>
                   </div>
                 </article>
@@ -469,7 +475,7 @@
                   <li><a href="#">CSS 3</a></li>
                   <li><a href="#">Firebase</a></li>
                   <li><a href="#">Node.js</a></li>
-                  <li><a href="#">Angular</a></li>
+                  <li><a href="#">React</a></li>
                   <li><a href="#">Bootstrap</a></li>
                   <li><a href="#">Chart.js</a></li>
                 </ul>
@@ -487,56 +493,29 @@
                 </ul>
               </div>
               <div class="col-lg-4 col-xl-5">
-                <h5 class="footer-modern-title oh-desktop"><span class="d-inline-block wow slideInLeft">Newsletter</span></h5>
-                <p class="wow fadeInRight">Sign up today for the latest news and updates.</p>
-                <!-- RD Mailform-->
-                <form class="rd-form rd-mailform rd-form-inline rd-form-inline-sm oh-desktop" data-form-output="form-output-global" data-form-type="subscribe" method="post" action="bat/rd-mailform.php">
-                  <div class="form-wrap wow slideInUp">
-                    <input class="form-input" id="subscribe-form-2-email" type="email" name="email" data-constraints="@Email @Required"/>
-                    <label class="form-label" for="subscribe-form-2-email">Enter your E-mail</label>
-                  </div>
-                  <div class="form-button form-button-2 wow slideInRight">
-                    <button class="button button-sm button-icon-3 button-primary button-winona" type="submit"><span class="d-none d-xl-inline-block">Subscribe</span><span class="icon mdi mdi-telegram d-xl-none"></span></button>
-                  </div>
-                </form>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="footer-modern-line-2">
-          <div class="container">
-            <div class="row row-30 align-items-center">
-              <div class="col-sm-6 col-md-7 col-lg-4 col-xl-4">
-                <div class="row row-30 align-items-center text-lg-center">
-                  <div class="col-md-7 col-xl-6"><a class="brand" href="index.html"><img src="images/logo-inverse-198x66.png" alt="" width="198" height="66"/></a></div>
-                  <div class="col-md-5 col-xl-6">
-                    <div class="iso-1"><span><img src="images/like-icon-58x25.png" alt="" width="58" height="25"/></span><span class="iso-1-big">9.4k</span></div>
+                  <h5 class="footer-modern-title oh-desktop"><span class="d-inline-block wow slideInLeft">Redes Sociales</span></h5>
+                <div class="footer-modern-contacts wow slideInUp">
+                  <div class="unit unit-spacing-sm align-items-center">
+                    <div class="unit-left"><span class="icon icon-24 mdi mdi-phone"></span></div>
+                    <div class="unit-body"><a class="phone" href="tel:#">+51 991 585 382</a></div>
                   </div>
                 </div>
-              </div>
-              <div class="col-sm-6 col-md-12 col-lg-8 col-xl-8 oh-desktop">
-                <div class="group-xmd group-sm-justify">
-                  <div class="footer-modern-contacts wow slideInUp">
-                    <div class="unit unit-spacing-sm align-items-center">
-                      <div class="unit-left"><span class="icon icon-24 mdi mdi-phone"></span></div>
-                      <div class="unit-body"><a class="phone" href="tel:#">+51 991 585 382</a></div>
-                    </div>
+                <div class="margen"> </div>
+                <div class="footer-modern-contacts wow slideInDown">
+                  <div class="unit unit-spacing-sm align-items-center">
+                    <div class="unit-left"><span class="icon mdi mdi-email"></span></div>
+                    <div class="unit-body"><a class="mail" href="mailto:#">cv.ccori@gmail.com</a></div>
                   </div>
-                  <div class="footer-modern-contacts wow slideInDown">
-                    <div class="unit unit-spacing-sm align-items-center">
-                      <div class="unit-left"><span class="icon mdi mdi-email"></span></div>
-                      <div class="unit-body"><a class="mail" href="mailto:#">cv.ccori@gmail.com</a></div>
-                    </div>
-                  </div>
-                  <div class="wow slideInRight">
-                    <ul class="list-inline footer-social-list footer-social-list-2 footer-social-list-3">
-                      <li><a class="icon mdi mdi-github-circle" href="https://github.com/CinthiaVilcachagua"></a></li>
-                      <li><a class="icon mdi mdi-linkedin" href="https://www.linkedin.com/in/cinthiavilcachagua/"></a></li>
-                      <li><a class="icon mdi mdi-twitter" href="https://twitter.com/CinthiaVilcach1"></a></li>
-                      <li><a class="icon mdi mdi-instagram" href="#"></a></li>
-                      
-                    </ul>
-                  </div>
+                </div>
+                <div class="margen"></div>
+                <!-- Redes Sociales-->
+                <div class="wow slideInRight">
+                  <ul class="list-inline footer-social-list footer-social-list-2 footer-social-list-3">
+                    <li><a class="icon mdi mdi-github-circle" href="https://github.com/CinthiaVilcachagua"></a></li>
+                    <li><a class="icon mdi mdi-linkedin" href="https://www.linkedin.com/in/cinthiavilcachagua/"></a></li>
+                    <li><a class="icon mdi mdi-twitter" href="https://twitter.com/CinthiaVilcach1"></a></li>
+                    <li><a class="icon mdi mdi-instagram" href="#"></a></li>
+                  </ul>
                 </div>
               </div>
             </div>
